# dance-of-the-fool

./: .gitignore  CLAUDE.md  CLAUDE_UKRAINIAN_TRANSLATION_PROMPTS.md  KAGGLE_MAMAYLM_SETUP.md  LICENSE-CODE  MAMAYLM_RESEARCH.md  PDF_CHUNKING_RESEARCH.md  README.md  RUNPOD_COST_CALCULATOR.md  TRANSLATION_EXPORT.md  WEBUI_AUTH_PLAN.md  WEBUI_DEVPLAN.md  check-mamaylm-requirements.sh  chunk_01.json  chunk_02.json  chunk_03.json  chunk_04.json  chunk_05.json  chunk_06.json  chunk_07.json  chunk_08.json  chunk_09.json  chunk_10.json  chunk_11.json  chunk_12.json  chunk_13.json  chunk_14.json  chunk_15.json  chunk_16.json  chunk_17.json  chunk_18.json  chunk_19.json  chunk_20.json  chunk_21.json  chunk_22.json  chunk_23.json  chunk_24.json  chunk_25.json  chunk_26.json  chunk_27.json  (+78 more)
.github/workflows/: README.md  build-epub.yml  build-outputs.yml  build-pdf.yml  build-webui.yml  deploy-pages.yml  release.yml
book/originals/: pavlyuk_tanets_nedoumka_e27087_470337.epub
book/originals/chunks/: chunk_04.json  chunk_07.json  chunk_12.json  chunk_13.json  chunk_15.json  chunk_22.json  chunk_23.json  chunk_24.json  chunk_25.json  chunk_28.json  chunk_33.json  chunk_36.json  chunk_37.json
book/translations/v1/: original_chunk_01.md  original_chunk_02.md  original_chunk_03.md  original_chunk_04.md  original_chunk_05.md  original_chunk_06.md  original_chunk_07.md  original_chunk_08.md  original_chunk_09.md  original_chunk_10.md  original_chunk_11.md  original_chunk_12.md  original_chunk_13.md  original_chunk_14.md  original_chunk_15.md  original_chunk_16.md  original_chunk_17.md  original_chunk_18.md  original_chunk_19.md  original_chunk_20.md  original_chunk_21.md  original_chunk_22.md  original_chunk_23.md  original_chunk_24.md  original_chunk_25.md  original_chunk_26.md  original_chunk_27.md  original_chunk_28.md  original_chunk_29.md  original_chunk_30.md  original_chunk_31.md  original_chunk_32.md  original_chunk_33.md  original_chunk_34.md  original_chunk_35.md  original_chunk_36.md  original_chunk_37.md  original_chunk_38.md  original_chunk_39.md  translation_chunk_01.md  (+30 more)
docs/: PROPOSED_SKILLS.md  TRANSLATION_EXPORT.md  VERSIONING.md  WEBUI_DEVPLAN.md  WEBUI_SETUP.md
scripts/: README.md  build-webui-data.py  extract-cover.py  generate-epub.py  generate-pdf.py  normalize-markdown.py  normalize-ukrainian-linebreaks.py  regenerate_all.py
src/spastics_dance/: __init__.py  epub_chunk.py  epub_info.py  epub_split.py  pdf_chunk.py  pdf_info.py  pdf_split.py
tools/: README.md  build-webui-data.py  extract-cover.py  generate-epub.py  generate-pdf.py  generate-ukrainian-markdown.py  normalize-markdown.py  normalize-ukrainian-linebreaks.py  regenerate_all.py
webui/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
webui/src/components/: Footer.astro  Header.astro  PageSpread.astro  UncertaintyPanel.astro
webui/src/data/: translation-data.json
webui/src/layouts/: BaseLayout.astro
webui/src/pages/: book.astro  index.astro
webui/src/pages/chunk/: [id].astro
webui/src/styles/: global.css
