[project]
name = "dance-of-the-fool"
version = "1.0.0"
description = "Tooling and pipeline for an English fan translation of the novel 'The Dance of the Fool' (PDF/EPUB processing, output generation, web reader)"
readme = "README.md"
authors = [
    { name = "Valerii Redchenko", email = "vredchenko@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    # Core dependencies used by multiple tools
]

[project.optional-dependencies]
# PDF processing tools
pdf-tools = [
    "PyMuPDF>=1.23.0",      # Fast PDF processing, splitting, text extraction
    "pypdf>=4.0.0",          # Pure Python PDF manipulation
    "pdfplumber>=0.11.0",    # Advanced text/table extraction
    "pikepdf>=8.0.0",        # PDF repair and manipulation
]

# EPUB processing tools
epub-tools = [
    "ebooklib>=0.18",        # EPUB reading and writing
    "lxml>=5.0.0",           # XML/HTML parsing for EPUB internals
]

# Export tools (for generating translation outputs)
export-tools = [
    "reportlab>=4.0.0",      # PDF generation
    "ebooklib>=0.18",        # EPUB generation
]

# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# All tools combined
all = [
    "dance-of-the-fool[pdf-tools,epub-tools,export-tools]",
]

[project.scripts]
# CLI commands for PDF tools
pdf-info = "spastics_dance.pdf_info:main"
pdf-split = "spastics_dance.pdf_split:main"
pdf-chunk = "spastics_dance.pdf_chunk:main"

# CLI commands for EPUB tools
epub-info = "spastics_dance.epub_info:main"
epub-split = "spastics_dance.epub_split:main"
epub-chunk = "spastics_dance.epub_chunk:main"

# Build/regeneration scripts
regenerate-all = "tools.regenerate_all:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The distribution is named "dance-of-the-fool", but the import package is
# "spastics_dance", so point hatchling at it explicitly.
[tool.hatch.build.targets.wheel]
packages = ["src/spastics_dance"]
